--- a/zombieStyle.css
+++ b/zombieStyle.css
@@ -4,11 +4,6 @@ body, html {
     background-color: black;
 }
 
-#score {
-    text-align: center;
-    color: white;
-}
-
 #end {
     position: relative;
     left: 50%;
@@ -19,10 +14,24 @@ body, html {
     width: 100%;
 }
 
+#scoreBoard {
+    clear: both;
+}
+
+#time {
+    color: white;
+    float: right;
+}
+
+#score {
+    color: white;
+    float: left;
+}
+
 #gameContainer {
     position: relative;
     display: flex;
-    background: url(images/spookyBackground.png);
+    background: url(images/start-game.jpg);
     background-size: cover;
     height: 80%;
     width: 100%;
@@ -32,5 +41,9 @@ body, html {
 
 .zombie {
     position: absolute;
+    max-width: 20%;
+    max-height: 20%;
+    height: auto;
+    width: auto;
 }
 
