created cursor pointers

--- a/zombie/style.css
+++ b/zombie/style.css
@@ -5,8 +5,33 @@ body, html {
 }
 
 #end {
-    position: relative;
-    left: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#endButton {
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #FFFFFF;
+    text-align: center;
+    transition: all 0.2s;
+    max-width: 40%;
+    max-height: 10%;
+    width: auto;
+    height: auto;
+    cursor: pointer;
+}
+
+#endButton:hover {
+    color: #000000;
+    background-color: #FFFFFF;
 }
 
 #menu {
@@ -59,6 +84,7 @@ body, html {
     width: 100%;
     background-color: black;
     flex-wrap: nowrap;
+    cursor: url(images/paw-pointer.png), auto;
 }
 
 .zombie {
