--- a/zombie/css/style.css
+++ b/zombie/css/style.css
@@ -12,14 +12,14 @@ body, html {
 
 #endButton {
     padding: 0.35em 1.2em;
-    border: 0.1em solid #FFFFFF;
+    border: 0.1em solid palegreen;
     margin: 0 0.3em 0.3em 0;
     border-radius: 0.12em;
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    color: #FFFFFF;
+    color: palegreen;
     text-align: center;
     transition: all 0.2s;
     max-width: 40%;
@@ -30,8 +30,8 @@ body, html {
 }
 
 #endButton:hover {
-    color: #000000;
-    background-color: #FFFFFF;
+    color: black;
+    background-color: palegreen;
 }
 
 #menu {
@@ -44,13 +44,17 @@ body, html {
 }
 
 #time {
-    color: white;
     float: right;
+    font-family: monospace;
+    color: palegreen;
+    padding-right: 1%;
 }
 
 #score {
-    color: white;
     float: left;
+    font-family: monospace;
+    color: palegreen;
+    padding-left: 1%;
 }
 
 #startScreen {
@@ -61,7 +65,7 @@ body, html {
     background-position: center;
     width: 100%;
     height: 100%;
-    background-image: url(images/start-game.jpg);
+    background-image: url(../images/start-game.jpg);
 }
 
 #gameOverScreen {
@@ -72,19 +76,19 @@ body, html {
     background-position: center;
     width: 100%;
     height: 100%;
-    background-image: url(images/game-over-gif.gif);
+    background-image: url(../images/game-over-gif.gif);
 }
 
 #gameContainer {
     position: relative;
     display: flex;
-    background: url(images/spookyBackground.png);
+    background: url(../images/spookyBackground.png);
     background-size: cover;
     height: 80%;
     width: 100%;
     background-color: black;
     flex-wrap: nowrap;
-    cursor: url(images/paw-pointer.png), auto;
+    cursor: url(../images/paw-pointer.png), auto;
 }
 
 .zombie {
