--- a/zombie/css/style.css
+++ b/zombie/css/style.css
@@ -56,6 +56,19 @@ body, html {
     color: palegreen;
     padding-left: 1%;
 }
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
 
 #startScreen {
     position: relative;
@@ -66,6 +79,8 @@ body, html {
     width: 100%;
     height: 100%;
     background-image: url(../images/start-game.jpg);
+    animation: blink 5s;
+    animation-iteration-count: infinite;
 }
 
 #gameOverScreen {
@@ -76,7 +91,22 @@ body, html {
     background-position: center;
     width: 100%;
     height: 100%;
-    background-image: url(../images/game-over-gif.gif);
+    background-image: url(../images/game-over.jpg);
+    animation: blink 5s;
+    animation-iteration-count: infinite;
+}
+
+#winScreen {
+    position: relative;
+    display: flex;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/win-game.jpg);
+    animation: blink 5s;
+    animation-iteration-count: infinite;
 }
 
 #gameContainer {
