--- a/zombie/css/style.css
+++ b/zombie/css/style.css
@@ -78,9 +78,7 @@ body, html {
     background-position: center;
     width: 100%;
     height: 100%;
-    background-image: url(../images/start-game.jpg);
-    animation: blink 5s;
-    animation-iteration-count: infinite;
+    background-image: url(../images/start-game.png);
 }
 
 #gameOverScreen {
