--- a/zombie/css/style.css
+++ b/zombie/css/style.css
@@ -79,6 +79,7 @@ body, html {
     width: 100%;
     height: 100%;
     background-image: url(../images/start-game.png);
+    cursor: pointer;
 }
 
 #gameOverScreen {
@@ -90,6 +91,7 @@ body, html {
     width: 100%;
     height: 100%;
     background-image: url(../images/game-over.jpg);
+    cursor: pointer;
     animation: blink 5s;
     animation-iteration-count: infinite;
 }
@@ -103,6 +105,7 @@ body, html {
     width: 100%;
     height: 100%;
     background-image: url(../images/win-game.jpg);
+    cursor: pointer;
     animation: blink 5s;
     animation-iteration-count: infinite;
 }
